--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="app.js"></script>
 </head>
+
 <body>
   <header>
     <h1>My Portfolio</h1>
   </header>
+
+
+
   <main>
     <h2>About Me</h2>
-    <p>Welcome to my portfolio! I am a [insert your job title or description here].</p>
+    <p>
+      Welcome to my portfolio! I am a enthusiastic student trying out every bit of tech out there. 
+      </br>For now i'm looking for an intern ship to fuel my ever growing interest in the IT world,
+      </br>Or a part-time job as junior developer (C# / Python / Unity).
+    </p>
     <h2>My Work</h2>
     <ul>
       <li><a href="#">Project 1</a></li>
@@ -17,8 +30,24 @@
       <li><a href="#">Project 3</a></li>
     </ul>
   </main>
+
+  <section>
+    <h1>Project 1</h1>
+    <p>This was an augmented reality assignment</p>
+  </section>
+
+  <section>
+    <h1>Project 2</h1>
+    <p>This was assignment to make a robot that could help in the healthcare sector</p>
+  </section>
+
+  <section>
+    <h1>Project 3</h1>
+    <p>I participated in a game jam where we had to make a game within 3 days</p>
+  </section>
+
   <footer>
-    <p>&copy; [Your Name] [Current Year]</p>
+    <p>&copy; Tobias Zelders 2023</p>
   </footer>
 </body>
 </html>
