--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <script defer src="app.js"></script>
 </head>
 
@@ -25,23 +25,23 @@
     </p>
     <h2>My Work</h2>
     <ul>
-      <li><a href="#">Project 1</a></li>
-      <li><a href="#">Project 2</a></li>
-      <li><a href="#">Project 3</a></li>
+      <li><a href="#p1" style="color: #ffffff">Project 1</a></li>
+      <li><a href="#p2" style="color: #ffffff">Project 2</a></li>
+      <li><a href="#p3" style="color: #ffffff">Project 3</a></li>
     </ul>
   </main>
 
-  <section>
+  <section class="hidden" id="p1">
     <h1>Project 1</h1>
     <p>This was an augmented reality assignment</p>
   </section>
 
-  <section>
+  <section class="hidden" id="p2">
     <h1>Project 2</h1>
     <p>This was assignment to make a robot that could help in the healthcare sector</p>
   </section>
 
-  <section>
+  <section class="hidden" id="p3">
     <h1>Project 3</h1>
     <p>I participated in a game jam where we had to make a game within 3 days</p>
   </section>
