Initial html content added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tobias Zelders | Portfolio</title>
+</head>
+<body>
+
+<header>
+    <nav class="navbar">
+        <div class="logo">TZ</div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="intro" id="home">
+    <div class="intro-content">
+        <div class="intro-text">
+            <h1>Tobias Zelders</h1>
+            <h2>Software Developer</h2>
+            <p>Full-time student Computer Science on Hogeschool Rotterdam</p>
+            <p>Full-time internship at Stager</p>
+            <p>Part-time system administrator at WORM</p>
+            <a href="#projects" class="button">View My Work</a>
+        </div>
+        <div>
+            <img src="" alt="Tobias Zelders" class="profile-pic">
+        </div>
+    </div>
+</section>
+
+<!-- About Section -->
+<section class="about" id="about">
+    <h2 class="section-title">About Me</h2>
+    <div class="about-content">
+        <div class="about-text">
+            <p>Hello! I'm Tobias, a Computer Science student at Hogeschool Rotterdam with a strong focus on both hardware and software development. Currently pursuing my Bachelor's degree, I combine theoretical knowledge with practical applications in various projects.</p>
+            <p>During my academic journey, I've gained valuable experience through my role as a Student at Hogeschool Rotterdam. My passion lies in creating innovative solutions that bridge the gap between electrical systems and software applications.</p>
+            <p>When I'm not studying or coding, you can find me working on personal projects, exploring new technologies, or contributing to open-source initiatives.</p>
+        </div>
+        <div class="about-skills">
+            <h3>My Skills</h3>
+            <div class="skill-tags">
+                <span class="skill-tag">Python</span>
+                <span class="skill-tag">C#</span>
+                <span class="skill-tag">Git</span>
+                <span class="skill-tag">HTML/CSS</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Projects Section Preview -->
+<section class="projects-preview" id="projects">
+    <div class="projects-container">
+        <h2 class="section-title">Featured Projects</h2>
+        <!-- Project cards would go here -->
+        <div class="view-all">
+            <a href="projects.html" class="cta-button">View All Projects</a>
+        </div>
+    </div>
+</section>
+
+<!-- Footer with Contact -->
+<footer id="contact">
+    <h2>Get In Touch</h2>
+    <p>Interested in collaborating or have questions? Feel free to reach out!</p>
+    <div class="social-links">
+        <a href="https://www.linkedin.com/in/tobias-zelders-600688211/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/TobiZelders" target="_blank">GitHub</a>
+        <a href="mailto:contact@example.com">Email</a>
+    </div>
+    <p>&copy; 2025 Tobias Zelders. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
