added css for landing + global + adjusted index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="global.css" >
+    <link rel="stylesheet" href="landing-page.css">
     <title>Tobias Zelders | Portfolio</title>
 </head>
 <body>
@@ -20,9 +21,9 @@
     </nav>
 </header>
 
-<section class="intro" id="home">
-    <div class="intro-content">
-        <div class="intro-text">
+<section class="landing-intro" id="home">
+    <div class="landing-intro-content">
+        <div class="landing-intro-text">
             <h1>Tobias Zelders</h1>
             <h2>Software Developer</h2>
             <p>Full-time student Computer Science on Hogeschool Rotterdam</p>
@@ -30,17 +31,17 @@
             <p>Part-time system administrator at WORM</p>
             <a href="#projects" class="button">View My Work</a>
         </div>
-        <div>
-            <img src="" alt="Tobias Zelders" class="profile-pic">
+        <div class="div-image">
+            <img src="IMG_3098.JPG" alt="Tobias Zelders" class="landing-profile-pic">
         </div>
     </div>
 </section>
 
 <!-- About Section -->
-<section class="about" id="about">
-    <h2 class="section-title">About Me</h2>
-    <div class="about-content">
-        <div class="about-text">
+<section class="landing-about" id="about">
+    <h2 class="landing-section-title">About Me</h2>
+    <div class="landing-about-content">
+        <div class="landing-about-text">
             <p>Hello! I'm Tobias, a Computer Science student at Hogeschool Rotterdam with a strong focus on both hardware and software development. Currently pursuing my Bachelor's degree, I combine theoretical knowledge with practical applications in various projects.</p>
             <p>During my academic journey, I've gained valuable experience through my role as a Student at Hogeschool Rotterdam. My passion lies in creating innovative solutions that bridge the gap between electrical systems and software applications.</p>
             <p>When I'm not studying or coding, you can find me working on personal projects, exploring new technologies, or contributing to open-source initiatives.</p>
