--- a/index.html
+++ b/index.html
@@ -4,42 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="global.css" >
+    <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="navigation-bar.css">
+    <link rel="stylesheet" href="effects.css">
     <link rel="stylesheet" href="landing-page.css">
+
+
     <title>Tobias Zelders | Portfolio</title>
 </head>
 <body>
 
 <header>
-    <nav class="navbar">
-        <div class="logo">TZ</div>
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <div class="logo d-block text-center">Tobias Zelders</div>
+    <div class="menu-bar">
+        <div class="menu-item">File</div>
+        <div class="menu-item">Edit</div>
+        <div class="menu-item">View</div>
+        <div class="menu-item">Terminal</div>
+        <div class="menu-item">Help</div>
+    </div>
+    <div class="nav-bar">
+        <a href="#home" class="tab active" data-tab="home">
+            <span class="tab-icon">📄</span>
+            <span>home.html</span>
+            <span class="close-icon">✕</span>
+        </a>
+        <a href="#about" class="tab" data-tab="about">
+            <span class="tab-icon">📄</span>
+            <span>about.html</span>
+            <span class="close-icon">✕</span>
+        </a>
+        <a href="#projects" class="tab" data-tab="projects">
+            <span class="tab-icon">📄</span>
+            <span>projects.js</span>
+            <span class="close-icon">✕</span>
+        </a>
+        <a href="#contact" class="tab" data-tab="contact">
+            <span class="tab-icon">📄</span>
+            <span>contact.css</span>
+            <span class="close-icon">✕</span>
+        </a>
+        <div class="add-tab">+</div>
+    </div>
 
-<section class="landing-intro" id="home">
+</header>
     <div class="landing-intro-content">
-        <div class="landing-intro-text">
-            <h1>Tobias Zelders</h1>
-            <h2>Software Developer</h2>
-            <p>Full-time student Computer Science on Hogeschool Rotterdam</p>
-            <p>Full-time internship at Stager</p>
-            <p>Part-time system administrator at WORM</p>
-            <a href="#projects" class="button">View My Work</a>
-        </div>
-        <div class="div-image">
-            <img src="IMG_3098.JPG" alt="Tobias Zelders" class="landing-profile-pic">
+        <div class="landing-intro-text text-left">
+            <h1 class="effect-spread">Computer Science<br>Student</h1>
+            <p>Full-time student Computer Science at Hogeschool Rotterdam</p>
         </div>
     </div>
-</section>
+    <div class="landing-intro-content">
+        <div class="landing-intro-text text-right">
+            <h1 class="effect-spread">System Administrator<br> at WORM</h1>
+            <p>Part-time system administrator at WORM</p>
+        </div>
+    </div>
+    <div class="landing-intro-content">
+        <div class="landing-intro-text text-left">
+            <h1 class="effect-spread">Junior Software Developer<br> at Stager</h1>
+            <p>Full-time internship at Stager</p>
+        </div>
+    </div>
+
+
+
 
 <!-- About Section -->
 <section class="landing-about" id="about">
-    <h2 class="landing-section-title">About Me</h2>
+    <h3>About Me</h3>
     <div class="landing-about-content">
         <div class="landing-about-text">
             <p>Hello! I'm Tobias, a Computer Science student at Hogeschool Rotterdam with a strong focus on both hardware and software development. Currently pursuing my Bachelor's degree, I combine theoretical knowledge with practical applications in various projects.</p>
@@ -58,19 +91,19 @@
     </div>
 </section>
 
-<!-- Projects Section Preview -->
-<section class="projects-preview" id="projects">
-    <div class="projects-container">
-        <h2 class="section-title">Featured Projects</h2>
-        <!-- Project cards would go here -->
-        <div class="view-all">
-            <a href="projects.html" class="cta-button">View All Projects</a>
-        </div>
-    </div>
-</section>
-
 <!-- Footer with Contact -->
 <footer id="contact">
+    <div class="status-bar">
+        <div class="status-items">
+            <div>Ln 22, Col 15</div>
+            <div>JavaScript</div>
+            <div>UTF-8</div>
+        </div>
+        <div class="status-items">
+            <div>Portfolio v1.0.0</div>
+            <div>Ready</div>
+        </div>
+    </div>
     <h2>Get In Touch</h2>
     <p>Interested in collaborating or have questions? Feel free to reach out!</p>
     <div class="social-links">
