changed names of file

--- a/index.html
+++ b/index.html
@@ -1,118 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="global.css" >
-    <link rel="stylesheet" href="utility.css">
-    <link rel="stylesheet" href="navigation-bar.css">
-    <link rel="stylesheet" href="effects.css">
-    <link rel="stylesheet" href="landing-page.css">
-
-
-    <title>Tobias Zelders | Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="landing-page.css">
 </head>
 <body>
-
-<header>
-    <div class="logo d-block text-center">Tobias Zelders</div>
-    <div class="menu-bar">
-        <div class="menu-item">File</div>
-        <div class="menu-item">Edit</div>
-        <div class="menu-item">View</div>
-        <div class="menu-item">Terminal</div>
-        <div class="menu-item">Help</div>
-    </div>
-    <div class="nav-bar">
-        <a href="#home" class="tab active" data-tab="home">
-            <span class="tab-icon">📄</span>
-            <span>home.html</span>
-            <span class="close-icon">✕</span>
-        </a>
-        <a href="#about" class="tab" data-tab="about">
-            <span class="tab-icon">📄</span>
-            <span>about.html</span>
-            <span class="close-icon">✕</span>
-        </a>
-        <a href="#projects" class="tab" data-tab="projects">
-            <span class="tab-icon">📄</span>
-            <span>projects.js</span>
-            <span class="close-icon">✕</span>
-        </a>
-        <a href="#contact" class="tab" data-tab="contact">
-            <span class="tab-icon">📄</span>
-            <span>contact.css</span>
-            <span class="close-icon">✕</span>
-        </a>
-        <div class="add-tab">+</div>
-    </div>
-
-</header>
-    <div class="landing-intro-content">
-        <div class="landing-intro-text text-left">
-            <h1 class="effect-spread">Computer Science<br>Student</h1>
-            <p>Full-time student Computer Science at Hogeschool Rotterdam</p>
-        </div>
-    </div>
-    <div class="landing-intro-content">
-        <div class="landing-intro-text text-right">
-            <h1 class="effect-spread">System Administrator<br> at WORM</h1>
-            <p>Part-time system administrator at WORM</p>
-        </div>
-    </div>
-    <div class="landing-intro-content">
-        <div class="landing-intro-text text-left">
-            <h1 class="effect-spread">Junior Software Developer<br> at Stager</h1>
-            <p>Full-time internship at Stager</p>
-        </div>
-    </div>
-
-
-
-
-<!-- About Section -->
-<section class="landing-about" id="about">
-    <h3>About Me</h3>
-    <div class="landing-about-content">
-        <div class="landing-about-text">
-            <p>Hello! I'm Tobias, a Computer Science student at Hogeschool Rotterdam with a strong focus on both hardware and software development. Currently pursuing my Bachelor's degree, I combine theoretical knowledge with practical applications in various projects.</p>
-            <p>During my academic journey, I've gained valuable experience through my role as a Student at Hogeschool Rotterdam. My passion lies in creating innovative solutions that bridge the gap between electrical systems and software applications.</p>
-            <p>When I'm not studying or coding, you can find me working on personal projects, exploring new technologies, or contributing to open-source initiatives.</p>
-        </div>
-        <div class="about-skills">
-            <h3>My Skills</h3>
-            <div class="skill-tags">
-                <span class="skill-tag">Python</span>
-                <span class="skill-tag">C#</span>
-                <span class="skill-tag">Git</span>
-                <span class="skill-tag">HTML/CSS</span>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Footer with Contact -->
-<footer id="contact">
-    <div class="status-bar">
-        <div class="status-items">
-            <div>Ln 22, Col 15</div>
-            <div>JavaScript</div>
-            <div>UTF-8</div>
-        </div>
-        <div class="status-items">
-            <div>Portfolio v1.0.0</div>
-            <div>Ready</div>
-        </div>
-    </div>
-    <h2>Get In Touch</h2>
-    <p>Interested in collaborating or have questions? Feel free to reach out!</p>
-    <div class="social-links">
-        <a href="https://www.linkedin.com/in/tobias-zelders-600688211/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/TobiZelders" target="_blank">GitHub</a>
-        <a href="mailto:contact@example.com">Email</a>
-    </div>
-    <p>&copy; 2025 Tobias Zelders. All rights reserved.</p>
-</footer>
-
+  <div class="border"></div>
+    <header>
+      <div></div>
+      <div class="landing-social">
+        <div class="space"></div>
+        <p><a>github</a> / <a>resume</a> / <a>linked-in</a> --- @2025</p>
+      </div>
+      <div class="landing-intro">
+        <h1>Portfolio</h1>
+        <p>Welcome to my portfolio. </p>
+      </div>
+      <nav class="landing-nav">
+        <a>Projects</a>
+        <a>Music</a>
+        <a>About</a>
+        <a>Contact</a>
+      </nav>
+    </header>
 </body>
 </html>
