added the links + changed a tag css

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <div></div>
       <div class="landing-social">
         <div class="space"></div>
-        <p><a>github</a> / <a>resume</a> / <a>linked-in</a> --- @2025</p>
+        <p><a href="https://github.com/TobiZelders">github</a> / <a href="#">resume</a> / <a href="https://www.linkedin.com/in/tobias-zelders-600688211/">linked-in</a> --- @2025</p>
       </div>
       <div class="landing-intro">
         <h1>Portfolio</h1>
-        <p>Welcome to my portfolio. </p>
+        <p>Welcome to my portfolio.</p>
       </div>
       <nav class="landing-nav">
-        <a>Projects</a>
-        <a>Music</a>
-        <a>About</a>
-        <a>Contact</a>
+        <a href="projects.html">Projects</a>
+        <a href="https://radio.worm.org/">Music</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </nav>
     </header>
 </body>
